feat(cmake): the library is now header only

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(Test test.cpp)
 
-target_link_libraries(Test PRIVATE framework_inputmodule_static)
+target_link_libraries(Test PUBLIC framework_inputmodule)
 set_property(TARGET Test PROPERTY CXX_STANDARD 20)
