chore(cmake): disable the Doc and tests exe when used as a dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,19 @@ elseif(UNIX)
     target_link_libraries(${PROJECT_NAME} INTERFACE udev)
 endif()
 
-find_package(Doxygen)
-if(DOXYGEN_FOUND)
-    message(STATUS "Documentation using Doxygen enabled")
-    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
-    set(DOXYGEN_WARN_LOGFILE ${CMAKE_BINARY_DIR}/doxygen-warnings.log)
-    set(DOXYGEN_PREDEFINED DOXYGEN_SHOULD_SKIP_THIS)
-    doxygen_add_docs(doc src/ README.md)
-else()
-    message(STATUS"Doxygen needs to be installed to build the documentation")
-endif()
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 
-add_subdirectory(tests)
+    find_package(Doxygen)
+    if(DOXYGEN_FOUND)
+        message(STATUS "Documentation using Doxygen enabled")
+        set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)
+        set(DOXYGEN_WARN_LOGFILE ${CMAKE_BINARY_DIR}/doxygen-warnings.log)
+        set(DOXYGEN_PREDEFINED DOXYGEN_SHOULD_SKIP_THIS)
+        doxygen_add_docs(doc src/ README.md)
+    else()
+        message(STATUS"Doxygen needs to be installed to build the documentation")
+    endif()
+
+    add_subdirectory(tests)
+
+endif(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
